--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <div class="container">
     <h1>Warehouse Machine Intake</h1>
 
-    <form method="post" action="YOUR_EXEC_URL_HERE" target="_top">
+    <form method="post" action="https://script.google.com/macros/s/AKfycbylx0J97zfqQV3atbvXlPPIyoRn4zVZ7qYoHTLgWPK8z2BbIAj-3WBKQObX1DvlSQgS/exec" target="_top">
       <div class="field">
         <label>Customer Name</label>
         <input type="text" name="customerName" required>
