--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
   <div class="container">
     <h1>Warehouse Machine Intake</h1>
 
-    <form method="post" action="https://script.google.com/macros/s/AKfycbylx0J97zfqQV3atbvXlPPIyoRn4zVZ7qYoHTLgWPK8z2BbIAj-3WBKQObX1DvlSQgS/exec" target="_top">
+    <form method="post" action="<form method="post" action="https://script.google.com/macros/s/AKfycbzetNcna-mEA2HK6uikM5JTV5HmhS2EF1pXphhj5-Clggg2gphRMeAsmvstv6MmAo0H/exec" target="_top">
+" target="_top">
       <div class="field">
         <label>Customer Name</label>
         <input type="text" name="customerName" required>
